--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
     "gh-pages": "^3.1.0",
     "worker-loader": "^2.0.0"
   },
-  "homepage": "https://kylejlin.github.io/mnist-digit-classifier-typescript"
+  "homepage": "."
 }
